<resources>
    <string name="app_name">个人报销平台</string>
    <string name="time_init">0s</string>
    <string name="complete">完成</string>
    <string name="jneqj">金额区间</string>
    <string name="zuidi">最低</string>
    <string name="zuigao">最高</string>
    <string name="shiyou">事由关键字</string>
    <string name="qingshursygjz">请输入事由关键字</string>
    <string name="confirm">确定</string>
    <string name="reset">重置</string>
    <string name="guize">规则</string>
    <string name="xinxi">信息</string>
    <string name="search">搜索</string>
    <string name="shuie">税额</string>
    <string name="jinehs">金额(含税)</string>
    <string name="yifentbl">已分摊比例</string>
    <string name="money">金额</string>
    <string name="qinshurje">请输入分摊金额</string>
    <string name="shanchubxfyft">删除本项费用分摊</string>
    <string name="cancel">取消</string>
    <string name="chulisj">处理时间</string>
    <string name="caozuor">操作人</string>
    <string name="jiedian">节点</string>
    <string name="shenpiyj">审批意见</string>
    <string name="baoxiaolx">报销类型</string>
    <string name="changantpsc">(长按图片删除)</string>
    <string name="shengqingtp">申请特批</string>
    <string name="wobuyl">我不要了</string>
    <string name="xiugaitj">修改提交</string>
    <string name="quxiaobc">取消报销</string>
    <string name="chongpai">重拍</string>
    <string name="shiyongzp">使用照片</string>
    <string name="paishepj">拍摄票据</string>
    <string name="jiangpiaojfrxxknldjy">将票据放入拍摄框内,亮度均匀</string>
    <string name="cmcsdqby">此面朝上,对齐边缘</string>
    <string name="cmcs">此面朝上&#160;</string>
    <string name="dqby">&#160;对齐边缘</string>
</resources>