<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:gravity="center"
        android:maxLines="1"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/chulisj"
        android:textColor="@color/tv"
        android:textSize="@dimen/tv1"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:maxLines="1"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/caozuor"
        android:textColor="@color/tv"
        android:textSize="@dimen/tv1"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:maxLines="1"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/jiedian"
        android:textColor="@color/tv"
        android:textSize="@dimen/tv1"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:gravity="center"
        android:maxLines="1"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/shenpiyj"
        android:textColor="@color/tv"
        android:textSize="@dimen/tv1"
        tools:ignore="RtlHardcoded" />

</LinearLayout>