<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="8dp">

    <LinearLayout
        style="@style/padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:textColor="@color/tv"
            android:textSize="@dimen/tv"
            tools:ignore="RtlHardcoded"
            tools:text="会议费" />

        <TextView
            android:id="@+id/detail_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="@color/tv"
            android:textSize="@dimen/tv"
            tools:ignore="RtlHardcoded"
            tools:text="20000.00" />

        <TextView
            android:id="@+id/type_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:maxLines="1"
            android:textColor="@color/EE4433"
            android:textSize="@dimen/tv"
            tools:ignore="RtlHardcoded"
            tools:text="需要分摊" />

    </LinearLayout>

    <include layout="@layout/v_line" />

    <LinearLayout
        style="@style/padding_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/shuie"
            android:textColor="@color/tv1"
            android:textSize="@dimen/tv2"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/jinehs"
            android:textColor="@color/tv1"
            android:textSize="@dimen/tv2"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:maxLines="1"
            android:text="@string/yifentbl"
            android:textColor="@color/tv1"
            android:textSize="@dimen/tv2"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

    <LinearLayout
        style="@style/padding_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/tax_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:textColor="@color/tv"
            android:textSize="@dimen/tv"
            tools:ignore="RtlHardcoded"
            tools:text="3500.00" />

        <TextView
            android:id="@+id/none_tax_money_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="@color/tv"
            android:textSize="@dimen/tv"
            tools:ignore="RtlHardcoded"
            tools:text="16500.00" />

        <TextView
            android:id="@+id/yet_complete_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:maxLines="1"
            android:textColor="@color/tv"
            android:textSize="@dimen/tv"
            tools:ignore="RtlHardcoded"
            tools:text="34.50%" />

    </LinearLayout>

</LinearLayout>